add project roadmap link to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,7 @@
             </ul>
         </li>
         <li><a href="{% base %}/docs/reference-manual.html">Reference Manual</a></li>
+        <li><a href="{{ site.data.theme.github_url }}/wiki#project-roadmap">Project Roadmap</a></li>
         <li><a href="{% base %}/examples/">Examples</a>
             <ul>
                 <li><a href="{% base %}/examples/rtlsdr-wbfm-mono.html">WBFM Mono</a></li>
