add supported hardware guide to docs

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -14,6 +14,7 @@
                 <li><a href="{% base %}/docs/embedding-luaradio.html">Embedding LuaRadio</a></li>
                 <li><a href="{% base %}/docs/architecture.html">Architecture</a></li>
                 <li><a href="{% base %}/docs/comparison-gnuradio.html">Comparison to GNU Radio</a></li>
+                <li><a href="{% base %}/docs/supported-hardware.html">Supported Hardware</a></li>
             </ul>
         </li>
         <li><a href="{% base %}/docs/reference-manual.html">Reference Manual</a></li>
