--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -275,6 +275,7 @@ pre code {
   line-height: 2.0rem;
   font-size: 1.2rem;
   overflow: auto;
+  padding: 0rem 1.5rem;
 }
 
 /******************************************************************************/
