update website for v0.5.0

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -1127,6 +1127,7 @@ pre code {
   line-height: 2.0rem;
   font-size: 1.2rem;
   overflow: auto;
+  padding: 0rem 1.5rem;
 }
 
 /******************************************************************************/
