move scrolling toc into its own include file

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,7 @@
     <div class="row">
       <div class="three columns sidebar">
         {% include sidebar.html %}
+        {% include scrolltoc.html %}
       </div>
       <div class="nine columns content">
         {{ content }}
