website: update copyright years in footer

--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -1,5 +1,5 @@
 <div class="disclaimer">
   <p>
-    © {{ site.data.theme.author }}, 2016 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a>, theme based on <a href="https://github.com/swanson/lagom">Lagom</a>
+    © {{ site.data.theme.author }}, 2016-2019 &mdash; built with <a href="http://jekyllrb.com/">Jekyll</a>, theme based on <a href="https://github.com/swanson/lagom">Lagom</a>
   </p>
 </div>
