website: update changelog link

--- a/website/_includes/sidebar.html
+++ b/website/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav class="menu">
   <h1 class="title"><a href="{% base %}">{{ site.data.theme.name }}</a></h1>
   <p align="center">
-      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="{{ site.data.theme.github_url }}/blob/master/ChangeLog.md"><code class="version">{{ site.data.theme.version }}</code></a>
+      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><a href="{{ site.data.theme.github_url }}/blob/master/CHANGELOG.md"><code class="version">{{ site.data.theme.version }}</code></a>
   </p>
   <div class="toc">
     <ul>
