--- a/website/_includes/sidebar.html
+++ b/website/_includes/sidebar.html
@@ -18,6 +18,7 @@
             </ul>
         </li>
         <li><a href="{% base %}/docs/reference-manual.html">Reference Manual</a></li>
+        <li><a href="https://groups.io/g/luaradio">Mailing List</a></li>
         <li><a href="{{ site.data.theme.github_url }}/wiki#project-roadmap">Project Roadmap</a></li>
         <li><a href="{% base %}/examples/">Examples</a>
             <ul>
