website: move mailing list link to top of sidebar

--- a/website/_includes/sidebar.html
+++ b/website/_includes/sidebar.html
@@ -2,7 +2,8 @@
   <h1 class="title"><a href="{% base %}">{{ site.data.theme.name }}</a></h1>
   <p align="center">
       <a href="{{ site.data.theme.github_url }}/blob/master/CHANGELOG.md"><i class="fa fa-link" aria-hidden="true"></i> <code class="version">{{ site.data.theme.version }}</code></a><br />
-      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br />
+      <a href="{{ site.data.theme.mailing_list_url }}"><i class="fa fa-envelope" aria-hidden="true"></i> Mailing List</a>
   </p>
   <div class="toc">
     <ul>
@@ -19,7 +20,6 @@
             </ul>
         </li>
         <li><a href="{% base %}/docs/reference-manual.html">Reference Manual</a></li>
-        <li><a href="https://groups.io/g/luaradio">Mailing List</a></li>
         <li><a href="{{ site.data.theme.github_url }}/wiki#project-roadmap">Project Roadmap</a></li>
         <li><a href="{% base %}/examples/">Examples</a>
             <ul>
