--- a/website/_includes/scrolltoc.html
+++ b/website/_includes/scrolltoc.html
@@ -3,7 +3,8 @@
     <h1 class="title"><a data-scroll href="#top">{{ site.data.theme.name }}</a></h1>
     <p align="center">
       <a href="{{ site.data.theme.github_url }}/blob/master/CHANGELOG.md"><i class="fa fa-link" aria-hidden="true"></i> <code class="version">{{ site.data.theme.version }}</code></a><br />
-      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a>
+      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br />
+      <a href="{{ site.data.theme.mailing_list_url }}"><i class="fa fa-envelope" aria-hidden="true"></i> Mailing List</a>
     </p>
   </div>
   <div class="toc">
