--- a/website/_includes/css/custom.css
+++ b/website/_includes/css/custom.css
@@ -166,7 +166,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: inherit;
   font-weight: 600;
   line-height: 1.4;
-  margin-bottom: 1.8rem;
+  margin-bottom: 1.6rem;
 }
 
 h2, h3, h4, h5, h6 {
@@ -181,6 +181,7 @@ h1 {
 }
 
 h2 {
+  padding-top: 0.6rem;
   padding-bottom: 0.48rem;
   font-size: 2.8rem;
   line-height: 1.225;
