--- a/website/_includes/sidebar.html
+++ b/website/_includes/sidebar.html
@@ -1,10 +1,10 @@
 <nav class="menu">
   <h1 class="title"><a href="{% base %}">{{ site.data.theme.name }}</a></h1>
-  <p align="center">
-      <a href="{{ site.data.theme.github_url }}/blob/master/CHANGELOG.md"><i class="fa fa-link" aria-hidden="true"></i> <code class="version">{{ site.data.theme.version }}</code></a><br />
-      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github" aria-hidden="true"></i> GitHub</a><br />
-      <a href="{{ site.data.theme.mailing_list_url }}"><i class="fa fa-envelope" aria-hidden="true"></i> Mailing List</a>
-  </p>
+  <div class="links">
+      <a href="{{ site.data.theme.github_url }}/blob/master/CHANGELOG.md"><i class="fa fa-link fa-fw" aria-hidden="true"></i> <code class="version">{{ site.data.theme.version }}</code></a><br />
+      <a href="{{ site.data.theme.github_url }}"><i class="fa fa-github fa-fw" aria-hidden="true"></i> GitHub</a><br />
+      <a href="{{ site.data.theme.mailing_list_url }}"><i class="fa fa-envelope fa-fw" aria-hidden="true"></i> Mailing List</a>
+  </div>
   <div class="toc">
     <ul>
         <li><a href="{% base %}/new-to-sdr.html">New to SDR?</a></li>
