website: add applications document to sidebar

--- a/website/_includes/sidebar.html
+++ b/website/_includes/sidebar.html
@@ -17,6 +17,7 @@
                 <li><a href="{% base %}/docs/architecture.html">Architecture</a></li>
                 <li><a href="{% base %}/docs/comparison-gnuradio.html">Comparison to GNU Radio</a></li>
                 <li><a href="{% base %}/docs/supported-hardware.html">Supported Hardware</a></li>
+                <li><a href="{% base %}/docs/applications.html">Built-in Applications</a></li>
             </ul>
         </li>
         <li><a href="{% base %}/docs/reference-manual.html">Reference Manual</a></li>
